--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>catify</groupId>
-	<artifactId>process-engine-core</artifactId>
+	<groupId>com.catify.bpmn</groupId>
+	<artifactId>bpmn-engine-core</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0</version>
 
@@ -24,13 +24,12 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<slf4j.version>1.6.6</slf4j.version>
 		<aspectj.version>1.6.12</aspectj.version>
 		<logback.version>1.0.6</logback.version>
 		<akka.version>2.0.3</akka.version>
 		<spring.version>3.1.2.RELEASE</spring.version>
-		<spring-data-neo4j.version>2.1.0.RC4</spring-data-neo4j.version>
-		<neo4j.version>1.8.RC1</neo4j.version>
+		<spring-data-neo4j.version>2.1.0.RELEASE</spring-data-neo4j.version>
+		<neo4j.version>1.8</neo4j.version>
 	</properties>
 
 	<repositories>
@@ -38,29 +37,6 @@
 			<id>typesafe</id>
 			<name>Typesafe Repository</name>
 			<url>http://repo.typesafe.com/typesafe/releases/</url>
-		</repository>
-		<repository>
-			<id>typesafe-snapshot</id>
-			<name>Typesafe Repository</name>
-			<url>http://repo.typesafe.com/typesafe/snapshots/</url>
-		</repository>
-		<repository>
-			<id>spring-maven-release</id>
-			<name>Spring Maven Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
-		</repository>
-		<repository>
-			<id>spring-maven-snapshot</id>
-			<name>Spring Maven Snapshot Repository</name>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<url>http://maven.springframework.org/snapshot</url>
-		</repository>
-		<repository>
-			<id>spring-maven-milestone</id>
-			<name>Spring Maven Milestone Repository</name>
-			<url>http://maven.springframework.org/milestone</url>
 		</repository>
 		<repository>
 			<id>neo4j-release-repository</id>
@@ -73,37 +49,10 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		<repository>
-			<id>neo4j-snapshot-repository</id>
-			<name>Neo4j Maven 2 snapshot repository</name>
-			<url>http://m2.neo4j.org/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
 	</repositories>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-maven-release</id>
-			<name>Spring Maven Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-maven-milestone</id>
-			<name>Spring Maven Milestone Repository</name>
-			<url>http://maven.springframework.org/milestone</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>onejar-maven-plugin.googlecode.com</id>
-			<url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<dependencies>
+		<!-- akka -->
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor</artifactId>
@@ -119,6 +68,7 @@
 			<artifactId>akka-testkit</artifactId>
 			<version>${akka.version}</version>
 		</dependency>
+		<!-- spring data neo4j -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-neo4j</artifactId>
@@ -134,65 +84,74 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- neo4j -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
+    		<groupId>org.neo4j</groupId>
+    		<artifactId>neo4j</artifactId>
+    		<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
-			<version>${spring.version}</version>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-dsl</artifactId>
+			<version>1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-
-		<!-- enable neo4j web admin for embedded db -->
-		<dependency>
-			<groupId>org.neo4j.app</groupId>
-			<artifactId>neo4j-server</artifactId>
-			<version>${neo4j.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-access</artifactId>
-				</exclusion>
-            <exclusion>
-                <artifactId>slf4j-log4j12</artifactId>
-                <groupId>org.slf4j</groupId>
-            </exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.neo4j.app</groupId>
-			<artifactId>neo4j-server</artifactId>
-			<version>${neo4j.version}</version>
-			<classifier>static-web</classifier>
-			<exclusions>
-				<exclusion>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-access</artifactId>
-				</exclusion>
-				            <exclusion>
-                <artifactId>slf4j-log4j12</artifactId>
-                <groupId>org.slf4j</groupId>
-            </exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jsp-2.1-jetty</artifactId>
-			<version>6.1.25</version>
-		</dependency>
 		<dependency>
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>2.7.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<!-- neo4j web admin for embedded db -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.neo4j.app</groupId> -->
+<!-- 			<artifactId>neo4j-server</artifactId> -->
+<!-- 			<version>${neo4j.version}</version> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>ch.qos.logback</groupId> -->
+<!-- 					<artifactId>logback-access</artifactId> -->
+<!-- 				</exclusion> -->
+<!--             <exclusion> -->
+<!--                 <artifactId>slf4j-log4j12</artifactId> -->
+<!--                 <groupId>org.slf4j</groupId> -->
+<!--             </exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.neo4j.app</groupId> -->
+<!-- 			<artifactId>neo4j-server</artifactId> -->
+<!-- 			<version>${neo4j.version}</version> -->
+<!-- 			<classifier>static-web</classifier> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>ch.qos.logback</groupId> -->
+<!-- 					<artifactId>logback-access</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!--                 <artifactId>slf4j-log4j12</artifactId> -->
+<!--                 <groupId>org.slf4j</groupId> -->
+<!--             </exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.mortbay.jetty</groupId> -->
+<!-- 			<artifactId>jsp-2.1-jetty</artifactId> -->
+<!-- 			<version>6.1.25</version> -->
+<!-- 		</dependency> -->
 		<!-- for testing -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -212,7 +171,6 @@
 			<version>1.9.0</version>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- logging -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -244,66 +202,85 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-<!--
 							<classpathPrefix>lib/</classpathPrefix>
--->
 							<mainClass>com.catify.processengine.core.AppStarter</mainClass>
 						</manifest>
-						<manifestEntries>
-<!-- 							<Class-Path>services/</Class-Path> -->
-						<Class-Path>services/camel-0.0.1-SNAPSHOT.jar services/voldemort-0.0.1-SNAPSHOT.jar</Class-Path>
-						</manifestEntries>
+<!-- 						<manifestEntries> -->
+<!-- 							<Class-Path>services/integration-spi-camel-1.0.jar services/data-spi-voldemort-1.0.jar</Class-Path> -->
+<!-- 						</manifestEntries> -->
 					</archive>
 				</configuration>
 			</plugin>
-
-			<!-- creates jar with dependencies -->
+			
+			<!-- copies the dependencies -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.2</version>
 				<executions>
 					<execution>
+						<id>copy-dependencies</id>
 						<phase>package</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-										<Main-Class>com.catify.processengine.core.AppStarter</Main-Class>
-									</manifestEntries>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>META-INF/spring.handlers</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>META-INF/spring.schemas</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>reference.conf</resource>
-								</transformer>
-							</transformers>
-							<filters>
-								<filter>
-									<artifact>*:*</artifact>
-									<excludes>
-										<exclude>META-INF/*.SF</exclude>
-										<exclude>META-INF/*.DSA</exclude>
-										<exclude>META-INF/*.RSA</exclude>
-									</excludes>
-								</filter>
-							</filters>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- creates jar with dependencies -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-shade-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<phase>package</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>shade</goal> -->
+<!-- 						</goals> -->
+<!-- 						<configuration> -->
+<!-- 							<transformers> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
+<!-- 									<manifestEntries> -->
+<!-- 										<Main-Class>com.catify.processengine.core.AppStarter</Main-Class> -->
+<!-- 									</manifestEntries> -->
+<!-- 								</transformer> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" /> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 									<resource>META-INF/spring.handlers</resource> -->
+<!-- 								</transformer> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 									<resource>META-INF/spring.schemas</resource> -->
+<!-- 								</transformer> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 									<resource>reference.conf</resource> -->
+<!-- 								</transformer> -->
+<!-- 							</transformers> -->
+<!-- 							<filters> -->
+<!-- 								<filter> -->
+<!-- 									<artifact>*:*</artifact> -->
+<!-- 									<excludes> -->
+<!-- 										<exclude>META-INF/*.SF</exclude> -->
+<!-- 										<exclude>META-INF/*.DSA</exclude> -->
+<!-- 										<exclude>META-INF/*.RSA</exclude> -->
+<!-- 									</excludes> -->
+<!-- 								</filter> -->
+<!-- 							</filters> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 
 			<!-- Execute the main class -->
 			<plugin>
@@ -458,6 +435,27 @@
 										<goals>
 											<goal>compile</goal>
 											<goal>test-compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.2,)
+										</versionRange>
+										<goals>
+											<goal>
+												copy-dependencies
+											</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
