--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<akka.version>2.0.3</akka.version>
 		<spring.version>3.1.2.RELEASE</spring.version>
 		<spring-data-neo4j.version>2.1.0.RELEASE</spring-data-neo4j.version>
-		<neo4j.version>1.8</neo4j.version>
+		<neo4j.version>1.8.1</neo4j.version>
 	</properties>
 
 	<repositories>
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-cypher</artifactId>
-			<version>1.8</version>
+			<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.neo4j</groupId>
@@ -123,12 +123,16 @@
 <!-- 			<exclusions> -->
 <!-- 				<exclusion> -->
 <!-- 					<groupId>ch.qos.logback</groupId> -->
+<!-- 					<artifactId>logback-classic</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>ch.qos.logback</groupId> -->
 <!-- 					<artifactId>logback-access</artifactId> -->
 <!-- 				</exclusion> -->
-<!--             <exclusion> -->
-<!--                 <artifactId>slf4j-log4j12</artifactId> -->
-<!--                 <groupId>org.slf4j</groupId> -->
-<!--             </exclusion> -->
+<!-- 	            <exclusion> -->
+<!-- 	                <artifactId>slf4j-log4j12</artifactId> -->
+<!-- 	                <groupId>org.slf4j</groupId> -->
+<!-- 	            </exclusion> -->
 <!-- 			</exclusions> -->
 <!-- 		</dependency> -->
 <!-- 		<dependency> -->
@@ -139,12 +143,16 @@
 <!-- 			<exclusions> -->
 <!-- 				<exclusion> -->
 <!-- 					<groupId>ch.qos.logback</groupId> -->
+<!-- 					<artifactId>logback-classic</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>ch.qos.logback</groupId> -->
 <!-- 					<artifactId>logback-access</artifactId> -->
 <!-- 				</exclusion> -->
 <!-- 				<exclusion> -->
-<!--                 <artifactId>slf4j-log4j12</artifactId> -->
-<!--                 <groupId>org.slf4j</groupId> -->
-<!--             </exclusion> -->
+<!--                 	<artifactId>slf4j-log4j12</artifactId> -->
+<!--                 	<groupId>org.slf4j</groupId> -->
+<!--             	</exclusion> -->
 <!-- 			</exclusions> -->
 <!-- 		</dependency> -->
 <!-- 		<dependency> -->
@@ -176,6 +184,17 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.6.5</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
