--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<spring.version>3.1.2.RELEASE</spring.version>
 		<spring-data-neo4j.version>2.1.0.RELEASE</spring-data-neo4j.version>
 		<neo4j.version>1.8.1</neo4j.version>
+		<jexl.version>2.1.1</jexl.version>
 	</properties>
 
 	<repositories>
@@ -52,6 +53,11 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl</artifactId>
+			<version>${jexl.version}</version>
+		</dependency>
 		<!-- akka -->
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
