--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 file-mailbox-dispatcher {
 	# mailbox type
-	mailbox-type = akka.actor.mailbox.FileBasedMailboxType
+	mailbox-type = akka.actor.mailbox.filebased.FileBasedMailboxType
 	# directory below which this queue resides (does not seem to work?)
 	directory-path = "./_mailboxes"
 }
