repared push to maven repo1

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,21 @@
 	<packaging>jar</packaging>
 	<version>1.0</version>
 
-	<name>a graph backed bpmn process engine</name>
+	<name>catify BPMN Engine core</name>
 	<url>http://www.catify.com</url>
+
+	<description>The catify BPMN Engine core is a graph backed lightweight yet extensible bpmn compatible business process engine</description>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/catify/bpmn-engine</url>
+	</scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,31 +46,7 @@
 		<akka.version>2.1.0</akka.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>typesafe</id>
-			<name>Typesafe Repository</name>
-			<url>http://repo.typesafe.com/typesafe/releases/</url>
-		</repository>
-		<repository>
-			<id>neo4j-release-repository</id>
-			<name>Neo4j Maven 2 release repository</name>
-			<url>http://m2.neo4j.org/releases</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-jexl</artifactId>
-			<version>${jexl.version}</version>
-		</dependency>
 		<!-- akka -->
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
@@ -79,7 +68,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl</artifactId>
+			<version>${jexl.version}</version>
+		</dependency>
 		<!-- spring data neo4j -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -108,11 +101,6 @@
 			<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-dsl</artifactId>
-			<version>1.8</version>
-		</dependency>
-		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 			<version>1.0.2</version>
@@ -134,7 +122,8 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-		<!-- neo4j web admin for embedded db -->
+		
+		<!-- neo4j web admin for embedded db (disabled until fixed) -->
 		<!-- <dependency> -->
 		<!-- <groupId>org.neo4j.app</groupId> -->
 		<!-- <artifactId>neo4j-server</artifactId> -->
@@ -179,6 +168,7 @@
 		<!-- <artifactId>jsp-2.1-jetty</artifactId> -->
 		<!-- <version>6.1.25</version> -->
 		<!-- </dependency> -->
+		
 		<!-- for testing -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -397,7 +387,7 @@
 
 		<pluginManagement>
 			<plugins>
-				<!-- This plugin's configuration is used to store Eclipse m2e settings 
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -406,6 +396,26 @@
 					<configuration>
 						<lifecycleMappingMetadata>
 							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											aspectj-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.2,)
+										</versionRange>
+										<goals>
+											<goal>test-compile</goal>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
@@ -419,26 +429,6 @@
 										</versionRange>
 										<goals>
 											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											aspectj-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.2,)
-										</versionRange>
-										<goals>
-											<goal>compile</goal>
-											<goal>test-compile</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
