--- a/src/main/resources/META-INF/config/datastore.properties
+++ b/src/main/resources/META-INF/config/datastore.properties
@@ -17,4 +17,4 @@
 #
 
 # set the service provider for the data object spi
-datastore.implementation = voldemort
+datastore.implementation = jpa-data-object
