--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,16 @@
 		</license>
 	</licenses>
 
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<scm>
-		<url>https://github.com/catify/bpmn-engine</url>
+		<connection>scm:git:git@github.com:catify/bpmn-engine.git</connection>
+		<developerConnection>scm:git:git@github.com:catify/bpmn-engine.git</developerConnection>
+		<url>git@github.com:catify/bpmn-engine.git</url>
 	</scm>
 
 	<properties>
@@ -296,7 +304,7 @@
 				</executions>
 			</plugin>
 
-			<!-- Execute the main class -->
+			<!-- execute the main class -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -312,16 +320,33 @@
 					<mainClass>com.catify.processengine.core.AppStarter</mainClass>
 				</configuration>
 			</plugin>
-
-			<!-- Create Javadocs -->
+		
+			<!-- create javadocs -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-				<configuration>
-					<show>private</show>
-					<nohelp>true</nohelp>
-				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		
+			<!-- create sources -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<!-- place config folder -->
