--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<groupId>com.catify.bpmn</groupId>
 	<artifactId>bpmn-engine-core</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<name>catify BPMN Engine Core</name>
 	<url>http://www.catify.com</url>
