--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<jexl.version>2.1.1</jexl.version>
 		<neo4j.version>1.9.M04</neo4j.version>
 		<akka.version>2.1.0</akka.version>
+		<junit.version>4.8.1</junit.version>
 	</properties>
 
 	<dependencies>
@@ -196,13 +197,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.0</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- logging -->
