Created deployment profile.

--- a/pom.xml
+++ b/pom.xml
@@ -247,24 +247,6 @@
 					<header>src/main/resources/apache_license.txt</header>
 				</configuration>
 			</plugin>
-			
-			<!-- gpg -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<configuration>
-							<keyname>catify</keyname>
-						</configuration>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 
 			<!-- creates an executable jar -->
 			<plugin>
@@ -525,4 +507,37 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<profiles>
+		<profile>
+			<id>default_profile</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>deploy_profile</id>
+			<build>
+				<plugins>
+					<!-- gpg -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<configuration>
+									<keyname>catify</keyname>
+								</configuration>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
